[package]
name = "apigw-ingest"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
anyhow = "1.0.66"
lambda_http = { version = "0.7", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.7"
tokio = { version = "1", features = ["macros"] }
tokio-util = { version = "0.7.4", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
aws-sdk-s3 = "0.22.0"
aws-config = "0.52.0"
#aws-types = "0.52.0"
arrow2 = { version = "0.14.2", features = [
    "io_json",
    "io_parquet"
]}
futures = "0.3.25"
futures-io = { version = "0.3.25" }
log = "0.4"
lazy_static = "1.4.0"
async_once = "0.2.6"
serde = "1.0.150"
serde_json = "1.0.89"
uuid = { version="1.2.2", features = ["v4"] }
